# www-project-threatatlas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  index.md  info.md  leaders.md  tab_contributors.md  tab_documentation.md
threatatlas-app/backend/: .dockerignore  Dockerfile  alembic.ini  populate_component_library.py  populate_knowledge_base.py  populate_owasp_linddun.py  pyproject.toml  seed_component_kb_links_curated.py
threatatlas-app/backend/alembic/: env.py
threatatlas-app/backend/alembic/versions/: 1e4c215959d3_add_diagram_versioning.py  42d5e8ebdc8c_add_threat_id_to_diagram_mitigations.py  4c0a12f2173f_add_product_collaborators.py  837f9f5cb442_initial_migration_with_all_models.py  8e428cd957df_add_user_authentication_and_ownership.py  a1b2c3d4e5f6_add_rbac_and_invitations.py  ad8d0fe1c1de_add_threat_modeling_models.py  de84307a6882_add_risk_assessment_fields_to_diagram_.py  h3i4j5k6l7m8_add_api_tokens.py  i4j5k6l7m8n9_add_audit_events.py  j5k6l7m8n9o0_add_user_integrations.py  k6l7m8n9o0p1_add_component_templates.py  l7m8n9o0p1q2_add_component_template_links.py  m8n9o0p1q2r3_add_component_template_is_modified.py  n9o0p1q2r3s4_add_acceptance_fields.py  o0p1q2r3s4t5_add_acceptance_review_fields.py  p1q2r3s4t5u6_add_notifications.py  q2r3s4t5u6v7_add_product_jira_project_key.py  r3s4t5u6v7w8_add_attack_technique_links.py
threatatlas-app/backend/app/: config.py  database.py  main.py  seed.py  seed_data.py
threatatlas-app/backend/app/ai/: agent.py
threatatlas-app/backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py  permissions.py  rate_limit.py
threatatlas-app/backend/app/data/: __init__.py  attack_techniques.py
threatatlas-app/backend/app/models/: __init__.py  api_token.py  attack_technique_link.py  audit_event.py  component_template.py  diagram.py  enums.py  (+12 more)
threatatlas-app/backend/scripts/: seed_idas_provider.py  seed_knowledge_base.py
threatatlas-app/backend/tests/: conftest.py  test_ai_analyze.py  test_analytics.py  test_api_tokens.py  test_attack.py  test_auth.py  test_collaboration_manager.py  test_component_apply.py  test_permissions.py  test_product_downloads.py  test_products.py  test_risk_service.py
(+142 files in other folders)
