[project]
name = "threatatlas"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ali Yazdani", email = "ali.yazdani@owasp.org"},
]
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.12.5",
    "jinja2>=3.1.6",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "pydantic-ai-slim[openai,anthropic]>=0.0.14",
    "redis>=5.0.0",
    "openai>=1.50.0",
    "anthropic>=0.36.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
"start:dev" = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
migrate = "alembic upgrade head"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
